<resources>
    <string name="app_name">HelloGbye</string>
    <string name="facebook_app_id">413962415641814</string>
    <string name="fb_login_protocol_scheme">fb413962415641814</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="tool_bar">Edit</string>
    <string name="tool_bar_preferences_save_button">SAVE</string>
    <string name="remmeber_me">Remember Me</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password"><u>Forgot?</u></string>
    <string name="password_reset">Password Reset</string>
    <string name="email_reset_succesfully">Email rest successfully! Go check email</string>
    <string name="create_account">Create Account</string>
    <string name="try_it_now">Try it Now</string>
    <string name="already_have_account">Already have a HellGbye account?</string>
    <string name="url_user_agreement">http://newdev.hellogbye.com/#/document/user-agreement</string>
    <string name="url_pp">http://newdev.hellogbye.com/#/document/privacy</string>
    <string name="tell_us">Tell us in your own words where you\nwant to go, when and with who.</string>
    <string name="title_activity_maps">Map</string>
    <string name="flight_operator">OPERATED BY</string>
    <string name="flight_number">FLIGHT #</string>
    <string name="flight_date">DATE</string>
    <string name="flight_aircraft_type">AIRCRAFT TYPE</string>
    <string name="flight_airport">AIRPORTS</string>
    <string name="flight_boarding">DEPARTURE</string>
    <string name="flight_duration">DURATION</string>
    <string name="flight_arrival">ARRIVAL</string>
    <string name="flight_class">CLASS</string>
    <string name="flight_addition_fees_title">ADDITIONAL FEES FOR BAGGAGE MAY APPLY</string>
    <string name="flight_addition_fees">Check for this airlines\'s policy</string>
    <string name="flight_meal">MEAL</string>
    <string name="flight_aircraft">AIRCRAFT</string>
    <string name="flight_baggage">BAGGAGE</string>
    <string name="flight_seat_selection">SEAT SELECTION</string>
    <string name="flight_baggage_carry_on">Carry On Baggage</string>
    <string name="flight_select_flight">Select Flight</string>
    <string name="flight_select_my_flight">My Flight</string>
    <string name="flight_show_alternate_flights">MORE FLIGHTS</string>
    <string name="flight_stop_over">STOPOVER: </string>
    <string name="flight_details_include_tax">incl taxes &amp; fees</string>
    <string name="flight_grid_more_options">Flight details and more options</string>
    <string name="flight_alternative_preferred_seat_type">Preferred Seat Type</string>
    <string name="hotel_grid_more_options">Hotel details and more options</string>
    <string name="show_alterate_hotels">More Hotels</string>
    <string name="alternative_hotel_room">ROOM</string>
    <string name="alternative_hotel_guest">GUEST</string>
    <string name="alternative_hotel_check_in">CHECKIN</string>
    <string name="alternative_hotel_check_out">CHECKOUT</string>
    <string name="alternative_hotel_address">ADDRESS</string>
    <string name="alternative_hotel_contact">CONTACT</string>
    <string name="alternative_hotel_photo_gallery">PHOTO GALLERY</string>
    <string name="alternative_hotel_amenities">AMENITIES</string>
    <string name="alternative_hotel_nearby_attractions">NEARBY ATTRACTIONS</string>
    <string name="alternative_sort">Sort By</string>
    <string name="alternative_pull_down_text">Pull down to see more"</string>
    <string name="flight_tab">Flight</string>
    <string name="hotel_tab">Hotel</string>
    <string name="select_hotel">Select Hotel</string>
    <string name="preferences_smoking">Smoking Preference</string>
    <string name="preferences_smoking_prefer">Do you prefer to have smoking or\nnon-smoking rooms in your hotel?</string>
    <string name="preferences_non_smoking_choice">Non-Smoking</string>
    <string name="preferences_smoking_choice">Smoking</string>
    <string name="preferences_flight_preferences">Rank Your Flight Preferences</string>
    <string name="preferences_hotel_preferences">Rank Your Hotel Preferences</string>
    <string name="preferences_flight_prefer">Rank the importance of your flight\npreferences, first being the most\nimportant.</string>
    <string name="preferences_stops">Preferred Number of Stops</string>
    <string name="preferences_stops_prefer">Tell us if you prefer direct flights or if you\'d\nrather save money on non-direct flights</string>
    <string name="preferences_stars">Preferred Star Rating</string>
    <string name="preferences_stars_prefer">Tell us what star ratings\nyou\'d consider when traveling</string>
    <string name="preferences_class">Preferred Cabin Class</string>
    <string name="preferences_class_prefer">Rank the importance of cabin class\nfrom most to least important.</string>
    <string name="preferences_bed_type">Preferred Bed Type</string>
    <string name="preferences_bed_rank">Rank the importance of bed types\nfrom most to least important</string>
    <string name="preferences_fare_type">Preferred Fare Type</string>
    <string name="preferences_fare_rank">Rank your preference for fare types\nfrom most to least important</string>
    <string name="preferences_prefered_hotel_chain">Preferred Hotel Chain</string>
    <string name="preferences_prefered_hotel_favorite">Tell us where you like to stay\nwhen you travel</string>
    <string name="preferences_hotel_prefer">Rank the importance of your hotel\npreferences, first being the most\nimportant.</string>
    <string name="preferences_prefered_aircraft">Preferred Aircraft Type</string>
    <string name="preferences_prefered_aircraft_favorite">Tell us which aircraft you prefer\n(if that\'s important to you)</string>
    <string name="preferences_prefered_flight_carrier">Preferred Airline</string>
    <string name="preferences_prefered_flight_carrier_favorite">Tell us which airlines you like best</string>
    <string name="preferences_hint_add_name">Profile name</string>
    <string name="preferences_add_button">Create new profile</string>
    <string name="preferences_remove_email">Remove Email Address</string>
    <string name="preferences_add_new_preferences">Add New Preferences</string>
    <string name="preferences_at_least_one_preference">You must have at least one\ntravel preference.</string>
    <string name="preferences_preferred_cabin_class">Preferred Cabin Class</string>
    <string name="preferences_relationship_choose">Choose relationship</string>
    <string name="preferences_save_pop_up">Save or discard changes?</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="type_message">Tap to type or press the mic</string>
    <string name="send">Go</string>
    <string name="default_cnc_message_examples">Type /examples to to see different ways to search. Type /tutorials to see short instructional videos.</string>
    <string name="default_cnc_message">Hello %1$s, welcome to\nHelloGbye. Tell us in your own words where and when you\'d like to go.</string>
    <string name="default_cnc_message_two">You can come back here\nanytime and make changes to\nyour itinerary</string>
    <string name="itinerary_created">OK, I\'ve found these options for you</string>
    <string name="itinerary_no_items">No content available</string>
    <string name="grid_has_been_updated">OK, the grid has been updated</string>
    <string name="itinerary_try_again">Itinerary Try Again</string>
    <string name="itinerary_inner_flight_item">(Incl.Taxes, fees &amp; charges)</string>
    <string name="cnc_start_planning_msg">Start planning a new itinerary by selecting</string>
    <string name="settings_search_hunt">Add Your Preferred Airline</string>
    <string name="settings_search_hotel_hint">Add Your Preferred Hotel Chain</string>
    <string name="settings_empty_view_hotel">No favorite hotel chains selected\nUse the search bar to add them.</string>
    <string name="settings_empty_view_aircraft">No favorite airline type chains selected\nUse the search bar to add them.</string>
    <string name="settings_more_then_allowed_selected_title">Error</string>
    <string name="settings_more_then_allowed_selected">Can not have more than 10 selected</string>
    <string name="settings_choose_profile">Choose profile</string>
    <string name="my_settings_flight">MY FLIGHTS</string>
    <string name="popular_settings_flight">POPULAR FLIGHTS</string>
    <string name="my_settings_hotel">MY HOTELS</string>
    <string name="popular_settings_hotel">POPULAR HOTEL</string>
    <string name="component_name">NAME</string>
    <string name="component_relationship">RELATIONSHIP</string>
    <string name="component_title">Title : </string>
    <string name="component_first">First : </string>
    <string name="component_second">Second : </string>
    <string name="component_email">EMAIL </string>
    <string name="component_first_name">Name</string>
    <string name="component_invite">INVITE TRAVEL COMPANIONS</string>
    <string name="component_invite_hint_name">First Name</string>
    <string name="component_invite_hint_last_name">Last Name</string>
    <string name="account_submit_feedback">Submit Feedback</string>
    <string name="account_submit_feedback_tell_us">Tell us what you think.Thoughts,\ncomments and suggestions are\nalways appreciated.</string>
    <string name="account_submit_feedback_submit">Submit Feedback</string>
    <string name="cancel">Cancel</string>
    <string name="sign_up_account">Create Account</string>
    <string name="sign_up_city">City</string>
    <string name="sign_up_city_name">Country</string>
    <string name="sign_up_province_name">Province Name</string>
    <string name="sign_up_password">Password</string>
    <string name="sign_up_confirm_password">Confirm Password</string>
    <string name="sign_up_personal_details">PERSONAL DETAILS</string>
    <string name="sign_up_contact_details">Contact Details</string>
    <string name="sign_up_phone_number">Phone Number</string>
    <string name="sign_up_term_of_use">By creating an account I herebye agree to\nHelloGbye<u>Agreement</u> and <u>Privacy Policy</u>. </string>
    <string name="sign_up_done">Done!</string>
    <string name="companion_empty_search">Search for travel companions\nin the HelloGbye system above,\nor Invite a new travel companion\nto HelloGbye</string>
    <string name="companion_empty_view_travel_title">You don\'t have any\nTravel Companions</string>
    <string name="payment_card_information">CARD INFORMATION</string>
    <string name="payment_scan_card">Scan</string>
    <string name="payment_card_number">Card Number</string>
    <string name="payment_exp_month">Exp. Month</string>
    <string name="payment_exp_year">Exp. Year</string>
    <string name="payment_cvv">CVV</string>
    <string name="payment_first_name">First Name</string>
    <string name="payment_last_name">Last Name</string>
    <string name="payment_save_card">Save Card</string>
    <string name="payment_postal">Postal</string>
    <string name="payment_province">Province</string>
    <string name="payment_city">City</string>
    <string name="payment_country">Country</string>
    <string name="payment_street">Street</string>
    <string name="payment_billing_information">BILLING INFORMATION</string>
    <string name="use_my_home_address_as_billing_address">Use my home address as billing address</string>
    <string name="my_trips">MY TRIPS</string>
    <string name="companions">COMPANIONS</string>
    <string name="notification">NOTIFICATIONS</string>
    <string name="my_account">MY ACCOUNT</string>
</resources>