<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bb_menu_my_trips"
        android:icon="@drawable/my_trips_icon_active_a_1"
        android:title="@string/my_trips" />
    <item
        android:id="@+id/bb_menu_companions"
        android:icon="@drawable/companions_icon_active_a_1"
        android:title="@string/companions" />
    <item
        android:id="@+id/bb_menu_cnc"
        android:icon="@drawable/chat_icon"
        android:title="" />
    <item
        android:id="@+id/bb_menu_notiifcations"
        android:icon="@drawable/notifications_icon_active_a_1"
        android:title="@string/notification" />
    <item
        android:id="@+id/bb_menu_my_account"
        android:icon="@drawable/my_account_icon_active_a_1"
        android:title="@string/my_account" />
</menu>