<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/COLOR_F5F5F5">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <hellogbye.com.hellogbyeandroid.views.FontTextView
        android:id="@+id/cc_info"
        android:layout_alignParentTop="true"
        android:padding="@dimen/DP10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/SP10"
        android:text="@string/payment_card_information"
        app:fontName="dinnextltpro_regular.otf" />

    <hellogbye.com.hellogbyeandroid.views.FontTextView
        android:id="@+id/cc_scan"
        style="@style/GrayCustomButtonStyle"
        android:layout_alignParentTop="true"
        android:padding="5dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignParentRight="true"
        android:textSize="@dimen/SP10"
        android:layout_marginTop="@dimen/DP6"
        android:layout_marginRight="@dimen/DP6"
        android:text="@string/payment_scan_card" />



    <LinearLayout
        android:id="@+id/cc_details_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/COLOR_WHITE"
        android:layout_below="@+id/cc_info"
        android:orientation="vertical"
        android:padding='@dimen/DP24'>

        <com.devmarvel.creditcardentry.library.CreditCardForm
            android:id="@+id/cc_number"
            style="@style/cc_number_edit_text"

            android:layout_width="match_parent"
            app:card_number_hint="@string/payment_card_number"
            android:hint="@string/payment_card_number"
            app:include_helper="false"
            app:include_zip="false"
            app:include_exp="false"
            app:include_security="false"
            android:inputType="phone"
            app:fontName="dinnextltpro_regular.otf" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/DP24"
            android:orientation="horizontal">

            <hellogbye.com.hellogbyeandroid.views.FontEditTextView
                android:id="@+id/cc_expiry_month"
                style="@style/cc_edit_text_style"
                android:layout_width="@dimen/DP0"
                android:layout_weight="1"
                android:hint="@string/payment_exp_month"
                android:gravity="center"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                app:fontName="dinnextltpro_regular.otf" />


            <hellogbye.com.hellogbyeandroid.views.FontEditTextView
                android:id="@+id/cc_expiry_year"
                style="@style/cc_edit_text_style"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:hint="@string/payment_exp_year"
                android:layout_marginLeft="@dimen/DP24"
                android:clickable="false"
                android:gravity="center"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                app:fontName="dinnextltpro_regular.otf" />

            <hellogbye.com.hellogbyeandroid.views.FontEditTextView
                android:id="@+id/cc_ccv"
                style="@style/cc_edit_text_style"
                android:layout_width="@dimen/DP0"
                android:layout_marginLeft="@dimen/DP24"
                android:layout_weight="1"
                android:hint="@string/payment_cvv"
                android:inputType="number"
                app:fontName="dinnextltpro_regular.otf" />


        </LinearLayout>


    </LinearLayout>

    <hellogbye.com.hellogbyeandroid.views.FontTextView
        android:id="@+id/cc_billing_address"
        android:padding="@dimen/DP16"
        android:layout_below="@+id/cc_details_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/SP10"
        android:text="@string/payment_billing_information"
        app:fontName="dinnextltpro_regular.otf" />


    <LinearLayout
        android:id="@+id/cc_billing_adress_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cc_billing_address"
        android:background="@color/COLOR_WHITE"
        android:orientation="vertical"
        android:padding='@dimen/DP24'>

        <CheckBox
            android:id="@+id/add_cc_checkboox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/SP16"
            android:text="@string/use_my_home_address_as_billing_address"/>

        <LinearLayout
            android:layout_marginTop="@dimen/DP24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <hellogbye.com.hellogbyeandroid.views.FontEditTextView
                android:id="@+id/cc_first_name"
                style="@style/cc_edit_text_style"
                android:layout_width="@dimen/DP0"
                android:layout_weight="1"
                android:hint="@string/payment_first_name"
                android:inputType="text"
                app:fontName="dinnextltpro_regular.otf" />

            <hellogbye.com.hellogbyeandroid.views.FontEditTextView
                android:id="@+id/cc_last_name"
                style="@style/cc_edit_text_style"
                android:layout_width="@dimen/DP0"
                android:layout_marginLeft="@dimen/DP20"
                android:layout_weight="1"
                android:hint="@string/payment_last_name"
                android:inputType="text"
                app:fontName="dinnextltpro_regular.otf" />


        </LinearLayout>

        <hellogbye.com.hellogbyeandroid.views.FontEditTextView
            android:id="@+id/cc_billint_st"
            style="@style/cc_edit_text_style"
            android:layout_width="match_parent"
            android:hint="@string/payment_street"
            android:layout_marginTop="@dimen/DP24"
            android:inputType="text"
            app:fontName="dinnextltpro_regular.otf" />

        <hellogbye.com.hellogbyeandroid.views.FontTextView
            android:id="@+id/cc_country"
            style="@style/cc_edit_text_style"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/DP24"
            android:hint="@string/payment_country"
            app:fontName="dinnextltpro_regular.otf" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/DP24"
            android:orientation="horizontal">

            <hellogbye.com.hellogbyeandroid.views.FontEditTextView
                android:id="@+id/cc_billing_city"
                style="@style/cc_edit_text_style"
                android:layout_width="@dimen/DP0"
                android:layout_weight="1"
                android:hint="@string/payment_city"
                android:inputType="text"
                app:fontName="dinnextltpro_regular.otf" />

            <hellogbye.com.hellogbyeandroid.views.FontTextView
                android:id="@+id/cc_billing_province"
                style="@style/cc_edit_text_style"
                android:layout_width="@dimen/DP0"
                android:layout_marginLeft="@dimen/DP20"
                android:layout_weight="1"
                android:hint="@string/payment_province"
                android:inputType="text"
                app:fontName="dinnextltpro_regular.otf" />

            <hellogbye.com.hellogbyeandroid.views.FontEditTextView
                android:id="@+id/cc_billing_postal"
                style="@style/cc_edit_text_style"
                android:layout_width="@dimen/DP0"
                android:layout_marginLeft="@dimen/DP20"
                android:layout_weight="1"
                android:hint="@string/payment_postal"
                android:inputType="text"
                app:fontName="dinnextltpro_regular.otf" />


        </LinearLayout>
    </LinearLayout>



    <hellogbye.com.hellogbyeandroid.views.FontButtonView
        android:id="@+id/cc_save"

        android:background="@drawable/selector_red_button"
        android:textSize="@dimen/SP20"
        app:fontName="dinnextltpro_medium.otf"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/DP20"
        android:textColor="@color/COLOR_WHITE"
        android:textAllCaps="false"
        android:layout_below="@+id/cc_billing_adress_ll"
        android:text="@string/payment_save_card" />



    </RelativeLayout>
    </ScrollView>
</LinearLayout>
