<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <hellogbye.com.hellogbyeandroid.views.FontTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/SP32"
        android:text="@string/account_submit_feedback"
        app:fontName="dinnextltpro_boldcondensed.otf"
        android:gravity="center"
        android:textColor="@color/COLOR_063345" />


    <hellogbye.com.hellogbyeandroid.views.FontTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/SP16"
        android:text="@string/account_submit_feedback_tell_us"
        app:fontName="dinnextltpro_regular.otf"
        android:gravity="center"
        android:textColor="@color/dark_grey" />

    
    <hellogbye.com.hellogbyeandroid.views.FontEditTextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/DP160"
        android:scrollbars="vertical"
        android:inputType="textMultiLine"
        android:background="@android:color/transparent"
        android:layout_margin="@dimen/DP60"/>


    <hellogbye.com.hellogbyeandroid.views.FontTextView
        android:id="@+id/account_submit_feedback"
        style="@style/RedCustomButtonStyle"
        android:layout_marginLeft="@dimen/DP54"
        android:layout_marginBottom="@dimen/DP20"
        android:layout_marginTop="@dimen/DP20"
        android:layout_marginRight="@dimen/DP54"
        app:fontName="dinnextltpro_mediumcond.ttf"
        android:text="@string/account_submit_feedback_submit" />


    <hellogbye.com.hellogbyeandroid.views.FontTextView
        android:id="@+id/account_cancel_feedback"
        android:background="@drawable/grey_button"
        style="@style/CustomButtonTextStyle"
        android:layout_marginLeft="@dimen/DP54"
        android:layout_marginBottom="@dimen/DP20"
        android:layout_marginRight="@dimen/DP54"
        android:textColor="@color/COLOR_063345"
        app:fontName="dinnextltpro_mediumcond.ttf"
        android:text="@string/cancel" />

</LinearLayout>
