<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


<LinearLayout
    android:id="@+id/settings_user_ll"
    android:layout_alignParentTop="true"
    android:layout_above="@+id/settings_remove_email_address"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <hellogbye.com.hellogbyeandroid.views.FontTextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/component_email"/>

    <hellogbye.com.hellogbyeandroid.views.FontEditTextView

        android:id="@+id/settings_email_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/component_email"/>


    <hellogbye.com.hellogbyeandroid.views.FontTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_choose_profile"/>

    <com.nhaarman.listviewanimations.itemmanipulation.DynamicListView
        android:id="@+id/settings_choose_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
</LinearLayout>

    <hellogbye.com.hellogbyeandroid.views.FontTextView
        android:id="@+id/settings_remove_email_address"
        android:background="@drawable/red_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/DP10"
        android:layout_alignParentBottom="true"
        android:textColor="@color/white"
        android:textSize="@dimen/SP20"
        android:gravity="center"
        app:fontName="dinnextltpro_medium.otf"
        android:padding="@dimen/DP20"
        android:text="@string/preferences_remove_email" />

</RelativeLayout>
